fix(app): dark mode bug

--- a/packages/cli/test/fixtures/nuxt/assets/css/tailwind.css
+++ b/packages/cli/test/fixtures/nuxt/assets/css/tailwind.css
@@ -36,7 +36,7 @@
     --radius: 0.5rem;
   }
  
-  .dark {
+  :root[class~="dark"] {
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
  
